--- a/DemoWebApplication/DemoWebApplication.csproj
+++ b/DemoWebApplication/DemoWebApplication.csproj
@@ -184,6 +184,7 @@
     <Content Include="Views\Books\SearchBook.cshtml" />
     <Content Include="Views\Books\AddBook.cshtml" />
     <Content Include="Views\Shared\_BookList.cshtml" />
+    <Content Include="Views\Shared\_Paging.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
