Updated with Edit Existing Database Record

--- a/DemoWebApplication/DemoWebApplication.csproj
+++ b/DemoWebApplication/DemoWebApplication.csproj
@@ -161,6 +161,8 @@
     <Content Include="Scripts\jquery-3.6.0.slim.min.map" />
     <Content Include="Scripts\jquery-3.6.0.min.map" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -184,7 +186,6 @@
     <Content Include="Views\Books\SearchBook.cshtml" />
     <Content Include="Views\Books\AddBook.cshtml" />
     <Content Include="Views\Shared\_BookList.cshtml" />
-    <Content Include="Views\Shared\_Paging.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
